template/css/common.css
/* ... */
.feature__item {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 290px;
    min-height: 160px;
}

.feature__icon {
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
}

.sign-1 {
    width: 103px;
    height: 90px;
    background-image: url("/template/img/why-icon-1.png");
}

.sign-2 {
    width: 136px;
    height: 127px;
    background-image: url("/template/img/why-icon-2.webp");
    rotate: -90deg;
}

.sign-3 {
    width: 160px;
    height: 160px;
    background-image: url("/template/img/why-icon-3.webp");
    rotate: -45deg;
}

.sign-4 {
    width: 103px;
    height: 103px;
    background-image: url("/template/img/why-icon-4.png");
}

.sign-5 {
    width: 150px;
    height: 150px;
    background-image: url("/template/img/why-icon-5.webp");
}

.sign-6 {
    width: 123px;
    height: 123px;
    background-image: url("/template/img/why-icon-6.webp");
}

@media (min-width: 640px) {
    .why-us__wrapper {
        padding-bottom: 100px;
    }
    .why-us::before {
        width: 880px;
        height: 873px;
        top: 0;
        right: 75%;
    }
    .why-us__title {
        font-size: 38px;
    }
    .feature__item {
        font-size: 18px;
        height: 300px;
    }
    .feature__icon {
        width: 160px;
        height: 160px;
    }

    @media (min-width: 1200px) {
        /* .why-us::before {
            width: 1530px;
            height: 1518px;
            top: 0;
            right: 75%;
        } */
        .why-us__wrapper {
            display: flex;
            width: 80%;
            justify-content: flex-start;
            align-items: start;
            margin-left: auto;
        }

        .why-us__features {
            justify-content: flex-start;
            align-items: start;
        }
    }
}
/* WhyUs End*/

/* Footer */
.footer {
    position: relative;
    z-index: 1;
}

.footer__bg {
    position: absolute;
    top: 0;
    left: 0;
    background-image: url("/template/img/footer-bg.webp");
    background-position: center;
    z-index: -1;
}

.footer__logo img {
    width: 173px;
    height: 46px;
    margin-top: -1rem;
}

.footer__socials img {
    width: 26px;
    height: 26px;
}

@media (min-width: 640px) {
    .footer__logo img {
        width: 240px;
        height: 64px;
    }
    .footer__links {
        gap: 52px;
    }
    .footer__socials img {
        width: 26px;
        height: 26px;
        margin-top: 0;
    }
}

@media (min-width: 1200px) {
    /* .footer__bg {
        top: -200px;
        height: calc(100% + 200px);
    } */

    .footer__wrapper {
        flex-direction: row;
        flex-wrap: wrap;
        font-size: 17px;
    }

    .footer__logo {
        margin-top: -16px;
    }

    .webdev {
        margin-top: -3.5%;
        margin-left: 26%;
    }
}
/* Footer END */

